force-app/main/default/objects/Contenido_Planilla_SS__c/Contenido_Planilla_SS__c.object-meta.xml
<CustomObject>
    <label>Contenido Planilla SS</label>
    <nameField>
        <label>Nombre de Contenido Planilla SS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenido Planilla SS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>