force-app/main/default/objects/Contenido_Planilla_SS__c/fields/Num_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Num_Patronal__c</fullName>
    <label>Num Patronal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>