force-app/main/default/objects/Contenido_Planilla_SS__c/fields/Planilla__c.field-meta.xml
<CustomField>
    <fullName>Planilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planilla Seguro Social</label>
    <referenceTo>Planilla_Seguro_Social__c</referenceTo>
    <relationshipLabel>Contenido Planilla SS</relationshipLabel>
    <relationshipName>Contenido_Planilla_SS</relationshipName>
    <type>Lookup</type>
</CustomField>