force-app/main/default/objects/Contenido_Planilla_SS__c/fields/Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre__c</fullName>
    <label>Segundo Nombre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>